Added face, eyes and ears with CSS

--- a/index.html
+++ b/index.html
@@ -19,12 +19,10 @@
                 </div>
                 <div class="nose"></div>
                 <div class="earLeft">
-                    <div class="inner-ear"></div>
-                </div>
+                    <div class="innerEarLeft"></div>
                 </div>
                 <div class="earRight">
-                    <div class="inner-ear"></div>
-                </div>
+                    <div class="innerEarRight"></div>
                 </div>
                 <div class="earringLeft"></div>
                 <div class="earringRight"></div>
@@ -39,6 +37,7 @@
                     <div class="pupil">
                     </div>
                 </div>
+            </div>
             </div>
             <div class="neck"></div>
             <div class="body"></div>
