--- a/index.html
+++ b/index.html
@@ -39,9 +39,12 @@
                 </div>
             </div>
             </div>
-            <div class="neck"></div>
+            <div class="neck">
+                <div class="neckShadow"></div>
+            </div>
             <div class="body"></div>
             <div class="hairBack"></div>
+            <div class="circle"></div>
         </div>
     </div>
 </body>
