--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
         <div class="head">
             <div class="face">
                 <div class="hairFront"></div>
+                <div class="cheekLeft"></div>
+                <div class="cheekRight"></div>
                 <div class="mouth">
                     <div class="teeth"></div>
                 </div>
