Added reflections to glasses

--- a/index.html
+++ b/index.html
@@ -26,10 +26,14 @@
                 <div class="earRight">
                     <div class="innerEarRight"></div>
                 </div>
-                <div class="earringLeft"></div>
-                <div class="earringRight"></div>
-                <div class="glassesLeft"></div>
-                <div class="glassesRight"></div>
+                <div class="glassesLeft">
+                    <div class="reflectionLeft"></div>
+                    <div class="reflectionLeftSecond"></div>
+                </div>
+                <div class="glassesRight">
+                    <div class="reflectionRight"></div>
+                    <div class="reflectionRightSecond"></div>
+                </div>
                 <div class="glassesMiddle"></div>
                 <div class="eyeLeft">
                     <div class="pupil">
